--- a/tmux.conf
+++ b/tmux.conf
@@ -1,95 +1,123 @@
-# use C-a, since it's on the home row and easier to hit than C-b
-set-option -g prefix C-a
-unbind-key C-a
-bind-key C-a send-prefix
-set -g base-index 1
+# split windows like vim
+# vim's definition of a horizontal/vertical split is reversed from tmux's
+bind s split-window -v
+bind v split-window -h
 
-# Easy config reload
-bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+bind ^s split-window -v
+bind ^v split-window -h
 
-# vi is good
+# move around panes with hjkl, as one would in vim after pressing ctrl-w
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind ^h select-pane -L
+bind ^j select-pane -D
+bind ^k select-pane -U
+bind ^l select-pane -R
+
+# resize panes like vim
+# feel free to change the "1" to however many lines you want to resize by, only
+# one at a time can be slow
+bind -r < resize-pane -L 10
+bind -r > resize-pane -R 10
+bind -r - resize-pane -D 10
+bind -r + resize-pane -U 10
+
+# bind : to command-prompt like vim
+# this is the default in tmux already
+bind : command-prompt
+
+# session management
+bind C new-session
+bind L choose-session
+
+# vi-style controls for copy mode
 setw -g mode-keys vi
 
-# mouse behavior
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
+# Set the prefix to ^A, like screen
+unbind C-b
+set -g prefix ^A
+bind a send-prefix
 
-set-option -g default-terminal screen-256color
+bind ^a last-window # toggle last window like screen
 
-bind-key : command-prompt
-bind-key r refresh-client
-bind-key L clear-history
+set -g update-environment "DISPLAY WINDOWID SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION"
 
-bind-key space next-window
-bind-key bspace previous-window
-bind-key enter next-layout
+bind K confirm kill-server
+bind X confirm kill-window
 
-# use vim-like keys for splits and windows
-bind-key v split-window -h
-bind-key s split-window -v
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+# longer scrollback
+set -g history-limit 10000
 
-# smart pane switching with awareness of vim splits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim$' && tmux send-keys 'C-\\') || tmux select-pane -l"
-bind C-l send-keys 'C-l'
+# let us use utf-8 drawing characters to make tab-like window formats
+setw -g utf8 on
+set -g status-utf8 on
 
-bind-key C-o rotate-window
+set -g status-bg default
+set -g status-fg white
 
-bind-key + select-layout main-horizontal
-bind-key = select-layout main-vertical
-set-window-option -g other-pane-height 25
-set-window-option -g other-pane-width 80
+# left side of status bar holds "(>- session name -<)"
+set -g status-left-length 100
+set -g status-left-bg green
+set -g status-left-fg black
+set -g status-left-attr bold
+set -g status-left ''
 
-bind-key a last-pane
-bind-key q display-panes
-bind-key c new-window
-bind-key t next-window
-bind-key T previous-window
+# right side of status bar holds "[host name] (date time)"
+set -g status-right-length 100
+set -g status-right-fg black
+set -g status-right-attr bold
+set -g status-right '#[fg=colour214,bg=colour235] #H#[fg=colour238]:#[fg=colour178]#S #[fg=colour039,bg=colour238] %y.%m.%d %H:%M '
 
-bind-key [ copy-mode
-bind-key ] paste-buffer
+# make background window look like white tab
+set-window-option -g window-status-bg default
+set-window-option -g window-status-fg white
+set-window-option -g window-status-attr none
+set-window-option -g window-status-format '#[fg=colour214,bg=colour235] #I #[fg=white,bg=colour236] #W #[default]'
 
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# make foreground window look like bold yellow foreground tab
+set-window-option -g window-status-current-attr none
+set-window-option -g window-status-current-format '#[fg=black,bg=colour214] #I #[fg=brightwhite,bg=colour238] #W #[default]'
 
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# active terminal yellow border, non-active white
+set -g pane-border-bg default
+set -g pane-border-fg colour238
+set -g pane-active-border-bg default
+set -g pane-active-border-fg colour214
 
-set-window-option -g display-panes-time 1500
+# set a 256color $TERM variable so programs inside tmux know they can use 256 colors
+set -g default-terminal screen-256color
 
-# Status Bar
-set-option -g status-interval 1
-set-option -g status-left ''
-set-option -g status-right '%l:%M%p'
-set-window-option -g window-status-current-fg magenta
-set-option -g status-fg default
+# disable mouse mode by default
+set -g mode-mouse off
+set -g mouse-resize-pane off
+set -g mouse-select-pane off
+set -g mouse-select-window off
 
-# Status Bar solarized-dark (default)
-set-option -g status-bg black
-set-option -g pane-active-border-fg black
-set-option -g pane-border-fg black
+# Toggle mouse on with m
+bind m \
+  set -g mode-mouse on \;\
+  set -g mouse-resize-pane on \;\
+  set -g mouse-select-pane on \;\
+  set -g mouse-select-window on \;\
+  display 'Mouse: ON'
 
-# Status Bar solarized-light
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g status-bg white"
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-active-border-fg white"
-if-shell "[ \"$COLORFGBG\" = \"11;15\" ]" "set-option -g pane-border-fg white"
+# Toggle mouse off with M
+bind M \
+  set -g mode-mouse off \;\
+  set -g mouse-resize-pane off \;\
+  set -g mouse-select-pane off \;\
+  set -g mouse-select-window off \;\
+  display 'Mouse: OFF'
 
-# Set window notifications
-setw -g monitor-activity on
-set -g visual-activity on
+# reload tmux config file with C-a r
+bind r source ~/.tmux.conf
 
-# Enable native Mac OS X copy/paste
-set-option -g default-command "/bin/bash -c 'which reattach-to-user-namespace >/dev/null && exec reattach-to-user-namespace $SHELL -l || exec $SHELL -l'"
+# Create a new window and prompt for name
+bind N command-prompt "new-window -n '%%'"
 
-# Allow the arrow key to be used immediately after changing windows
-set-option -g repeat-time 0
+# Rebind prefix to b
+bind B set -g prefix ^b
+bind A set -g prefix ^a
