--- a/tmux.conf
+++ b/tmux.conf
@@ -43,7 +43,7 @@ bind a send-prefix
 
 bind ^a last-window # toggle last window like screen
 
-set -g update-environment "DISPLAY WINDOWID SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION"
+set -g update-environment "DISPLAY WINDOWID SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION"
 
 bind K confirm kill-server
 bind X confirm kill-window
